--- a/Site Modelo/src/styles/styles.css
+++ b/Site Modelo/src/styles/styles.css
@@ -6,12 +6,12 @@
 @import url('footer.css');
 
 :root {
-    --color-primary-1: #fff9ea;
-    --color-primary-2: #ffe8b4;
-    --color-primary-3: #f8d477;
-    --color-primary-4: #ffe100;
-    --color-primary-5: #ffcb45;
-    --color-primary-6: #e9a209;
+    --color-primary-1: #faf0fa;
+    --color-primary-2: #fcc2fd;
+    --color-primary-3: #fabafb;
+    --color-primary-4: #f7acf4;
+    --color-primary-5: #f887f0;
+    --color-primary-6: #f73bfa;
 
     --color-neutral-0: #fff;
     --color-neutral-1: #1d1d1d;
