--- a/Site Modelo/src/styles/home.css
+++ b/Site Modelo/src/styles/home.css
@@ -51,16 +51,29 @@
 }
 
 #banner {
+    position: absolute;
+    left: 630px;
+    top: 50px;
     display: flex;
     align-items: start;
-    justify-content: end;
-    width: 70%;
+    justify-content: center;
+    width: 50%;
+    height: 750px;
     z-index: 2;
 }
 
 #banner img {
-    height: 100%;
+    height: 80%;
     width: fit-content;
+}
+#text-banner {
+    position: relative;
+    top: 150px;
+    left: 35px;
+    font-family: 'poppins', sans-serif;
+    font-size: 3em;
+    font-weight: bolder;
+    text-align: center;
 }
 
 .shape {
@@ -68,7 +81,7 @@
     width: 50%;
     height: 100%;
     position: absolute;
-    border-radius: 40% 30% 0% 20%;
+    border-radius: 40% 20% 0% 20%;
     top: 0;
     right: 0;
     z-index: 1;
