--- a/Site Modelo/src/styles/header.css
+++ b/Site Modelo/src/styles/header.css
@@ -1,10 +1,16 @@
 header {
     width: 100%;
-    padding: 28px 8%;
+    padding: 5px 8%;
     position: sticky;
     top: 0;
     background-color: var(--color-primary-1);
     z-index: 3;
+}
+
+#logo {
+    background-color: #f73bfa;
+    padding: 3px;
+    border-radius: 50%;
 }
 
 #navbar {
