--- a/Site Modelo/src/styles/home.css
+++ b/Site Modelo/src/styles/home.css
@@ -63,17 +63,36 @@
 }
 
 #banner img {
+    position: absolute;
+    left: 410px;
     height: 80%;
     width: fit-content;
 }
+
+#tela {
+    width: 257px;
+    height: 452px;
+    position: absolute;
+    left: 430px;
+    top: 76px;
+    border: none;
+    z-index: 1;
+}
+
 #text-banner {
-    position: relative;
+    width: 300px;
+    position: absolute;
     top: 150px;
-    left: 35px;
+    left: 100px;
     font-family: 'poppins', sans-serif;
     font-size: 3em;
     font-weight: bolder;
     text-align: center;
+}
+
+#link-insta {
+    color: #f73bfa;
+    text-decoration: none;
 }
 
 .shape {
