--- a/Site Modelo/src/styles/menu.css
+++ b/Site Modelo/src/styles/menu.css
@@ -6,7 +6,7 @@
     min-height: 100vh;
 }
 
-#dishes {
+#produtos {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -14,7 +14,7 @@
     margin-top: 32px;
 }
 
-.dish {
+.produto {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,7 +28,7 @@
     overflow: hidden;
 }
 
-.dish-heart {
+.produto-heart {
     position: absolute;
     background-color: var(--color-primary-6);
     display: flex;
@@ -43,34 +43,34 @@
     border-radius: 0px 37.5px 0px 42.5px;
 }
 
-.dish-description {
+.produto-description {
     color: #434343;
     text-align: center;
 }
 
-.dish-rate i {
+.produto-rate i {
     color: var(--color-primary-6);
 }
 
-.dish-price {
+.produto-price {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
 @media screen and (max-width: 1170px) {
-    #dishes {
+    #produtos {
         flex-wrap: wrap;
         justify-content: center;
     }
 
-    .dish {
+    .produto {
         width: calc(50% - 12px);
     }
 }
 
 @media screen and (max-width: 600px) {
-    .dish {
+    .produto {
         width: 100%;
     }
 
