--- a/Site Modelo/src/styles/footer.css
+++ b/Site Modelo/src/styles/footer.css
@@ -1,6 +1,6 @@
 footer {
     background-color: var(--color-primary-2);
-    border-color: #faf0fa;
+    border-color: #f4ebdd;
 }
 
 #footer_items {
