--- a/Site Modelo/src/styles/home.css
+++ b/Site Modelo/src/styles/home.css
@@ -13,8 +13,10 @@
 }
 
 #cta .title {
-    font-size: 4rem;
-    color: var(--color-neutral-1);;
+    font-size: 5rem;
+    line-height: 1em;
+    color: var(--color-neutral-1);
+    margin-bottom: 30px;
 }
 
 #cta .title span {
@@ -23,6 +25,8 @@
 
 #cta .description {
     font-size: 1.2rem;
+    text-align: center;
+    margin-bottom: 25px;
 }
 
 #cta_buttons {
@@ -82,12 +86,14 @@
 #text-banner {
     width: 300px;
     position: absolute;
-    top: 150px;
+    top: 100px;
     left: 185px;
     font-family: 'poppins', sans-serif;
     font-size: 3em;
     font-weight: bolder;
     text-align: center;
+    text-decoration: underline;
+    line-height: 2.2em;
 }
 
 #link-insta {
