--- a/Site Modelo/src/styles/menu.css
+++ b/Site Modelo/src/styles/menu.css
@@ -58,6 +58,17 @@
     gap: 20px;
 }
 
+.produto-title {
+    background-color: var(--color-primary-4);
+    width: 100%;
+    text-align: center;
+    color: var(--color-primary-1);
+}
+
+.depoimentos {
+    text-align: justify;
+}
+
 @media screen and (max-width: 1170px) {
     #produtos {
         flex-wrap: wrap;
